--- a/style.css
+++ b/style.css
@@ -18,9 +18,11 @@ ________________________
 */
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;600&family=Montserrat&display=swap');
+
 html {
-    font-size: 100%; /* 16px default*/
-} 
+    font-size: 100%;
+    /* 16px default*/
+}
 
 /*
 ________________________
@@ -153,6 +155,7 @@ ________________________
     border: 1px solid black;
     margin-left: auto;
     margin-right: auto;
+    position: inherit;
 }
 
 .item {
@@ -160,11 +163,14 @@ ________________________
     width: 150px;
 }
 
-.item1{
+.item1 {
     background-color: rgb(255, 190, 225);
+    position: sticky;
+    top: 100px;
+    left: 50px;
 }
 
-.item2{
+.item2 {
     background-color: rgb(131, 204, 233)
 }
 
@@ -173,11 +179,21 @@ ________________________
 Units
 ________________________
 */
+
+.box__parent {
+    width: 50%;
+}
+
+.box__pixels {
+    width: 200px;
+}
+
 .box__container {
     height: auto;
     margin: 10px;
     width: 70%;
 }
+
 .box {
     border: 1px solid var(--grey-900);
     height: auto;
@@ -191,43 +207,75 @@ ________________________
     font-size: 25px;
 }
 
+.font__1em {
+    font-size: 1em;
+}
 
-/*
+.font__1rem {
+    font-size: 1rem;
+}
+
+.font__100percent {
+    font-size: 100%;
+}
+    /*
 ________________________
 Flex
 ________________________
 */
-.flex__container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+    .flex__container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 
-/*
+    /*
 ________________________
 Media Queries
 ________________________
 */
-.media__container{
-    height: 20vh;
-    width: 90vw;
-    margin-bottom: 50px;
-    background-color: var(--primary-100);
-}
-/* Extra small devices (phones, 600px and down) */
+    .media__container {
+        height: 20vh;
+        width: 90vw;
+        margin-bottom: 50px;
+        background-color: var(--primary-100);
+    }
+
+    /* Extra small devices (phones, 600px and down) */
+
+    @media screen and (max-width : 600px){
+        .media__container {
+            background-color: var(--primary-100);
+        }   
+    }
+
+    /* Small devices (portrait tablets and large phones, 600px and up) */
+    @media screen and (min-width : 600px){
+        .media__container {
+            background-color: var(--primary-200);
+        }   
+    }
 
 
-
-/* Small devices (portrait tablets and large phones, 600px and up) */
-
-
-
-/* Medium devices (landscape tablets, 768px and up) */
-
-
-
-/* Large devices (laptops/desktops, 992px and up) */
+    /* Medium devices (landscape tablets, 768px and up) */
+    @media screen and (min-width : 768px){
+        .media__container {
+            background-color: var(--primary-400);
+        }   
+    }
 
 
+    /* Large devices (laptops/desktops, 992px and up) */
+    @media screen and (min-width : 992px){
+        .media__container {
+            background-color: var(--primary-600);
+        }   
+    }
 
-/* Extra large devices (large laptops and desktops, 1200px and up) */
+
+    /* Extra large devices (large laptops and desktops, 1200px and up) */
+    @media screen and (min-width : 1200px){
+        .media__container {
+            background-color: var(--primary-800);
+        }   
+    }
